[gd_scene load_steps=34 format=2]

[ext_resource path="res://assets/Player/BusGhost.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Player/PlayerNoodles.gd" type="Script" id=2]
[ext_resource path="res://assets/Player/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Canteen/canteen walk cycle.png" type="Texture" id=4]
[ext_resource path="res://assets/Player/CanteenGhost.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Speech Text/SpeechText.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/AnxietyMeter/AnxietyMeter.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Streets/StreetGhost.tscn" type="PackedScene" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 2.81109

[sub_resource type="Animation" id=2]
resource_name = "IdleDown"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 14 ]
}

[sub_resource type="Animation" id=3]
resource_name = "IdleLeft"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 9 ]
}

[sub_resource type="Animation" id=4]
resource_name = "IdleRight"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}

[sub_resource type="Animation" id=5]
resource_name = "IdleUp"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 19 ]
}

[sub_resource type="Animation" id=6]
resource_name = "RunDown"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 10, 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=7]
resource_name = "RunLeft"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=8]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=9]
resource_name = "RunUp"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=26]
resource_name = "Spill"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 20, 21, 22 ]
}

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=31]
blend_point_0/node = SubResource( 27 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 28 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 29 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 30 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "RunDown"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "RunUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=36]
blend_point_0/node = SubResource( 32 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 33 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 34 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 35 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachine" id=39]
states/Idle/node = SubResource( 31 )
states/Idle/position = Vector2( 293, 93 )
states/Run/node = SubResource( 36 )
states/Run/position = Vector2( 502, 93 )
transitions = [ "Idle", "Run", SubResource( 37 ), "Run", "Idle", SubResource( 38 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=40]

[sub_resource type="CapsuleShape2D" id=25]
radius = 4.57367
height = 6.05583

[node name="PlayerNoodles" type="KinematicBody2D"]
scale = Vector2( 1.057, 1.207 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleDown = SubResource( 2 )
anims/IdleLeft = SubResource( 3 )
anims/IdleRight = SubResource( 4 )
anims/IdleUp = SubResource( 5 )
anims/RunDown = SubResource( 6 )
anims/RunLeft = SubResource( 7 )
anims/RunRight = SubResource( 8 )
anims/RunUp = SubResource( 9 )
anims/Spill = SubResource( 26 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 39 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 40 )
parameters/Idle/blend_position = Vector2( 0.749186, 0.974138 )
parameters/Run/blend_position = Vector2( -0.00194174, 0.0121458 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0.477078, -1.12768 )
scale = Vector2( 1.5, 1 )
shape = SubResource( 25 )

[node name="BusGhost" parent="." instance=ExtResource( 1 )]
position = Vector2( 15.6258, -7.73222 )

[node name="CanteenGhost" parent="." instance=ExtResource( 5 )]
position = Vector2( -0.251453, -18.8349 )

[node name="StreetGhost" parent="." instance=ExtResource( 8 )]
position = Vector2( -15.1806, -7.42901 )

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( 0.628811, -6.41263 )
texture = ExtResource( 4 )
hframes = 23
frame = 22

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 3.78523, 2.66686 )
current = true
zoom = Vector2( 0.6, 0.9 )

[node name="AnxietyMeter" parent="Camera2D" instance=ExtResource( 7 )]
margin_left = 11.8436
margin_top = -65.4721
margin_right = 11.8436
margin_bottom = -65.4721
rect_scale = Vector2( 0.261429, 0.298159 )

[node name="SpeechText" parent="Camera2D" instance=ExtResource( 6 )]
margin_left = -89.5722
margin_top = 16.228
margin_right = -89.5722
margin_bottom = 16.228
rect_scale = Vector2( 0.56, 0.741 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Hitbox"]
